// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-core/TooltipBase/Title should renders correctly  1`] = `
<Text
  allowFontScaling={true}
  style={
    Array [
      Object {
        "color": "#FFF",
        "fontFamily": "Inter-SemiBold",
        "fontSize": 21,
        "lineHeight": 27,
      },
      Array [
        Object {
          "zIndex": 1,
        },
        undefined,
      ],
    ]
  }
>
  title
</Text>
`;

exports[`@npm/mobydick-core/TooltipBase/Title should renders correctly font 1`] = `
<Text
  allowFontScaling={true}
  style={
    Array [
      Object {
        "color": "#20242D",
        "fontFamily": "Inter-Regular",
        "fontSize": 21,
        "lineHeight": 27,
      },
      Array [
        Object {
          "zIndex": 1,
        },
        Object {
          "width": 100,
        },
      ],
    ]
  }
>
  title
</Text>
`;
